CSS/main.css
@import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');

:root {
	--mobile-screen-width: 641px;
	--background-color: white;
	--on-background-color: black;
	--surface-color: white;
	--on-surface-color: black;
	--surface-overlay-color: black;
	--primary-color: rgb(30, 144, 255);
	--on-primary-color: white;
	--success-color: limegreen;
	--warning-color: gold;
	--danger-color: red;
	--default-font-family: "Helvetica", sans-serif;
	--serif-font-family: "Garamond", serif;
	--cursive-font-family: "Charmonman", cursive;
	--default-font-weight: 400;
	--thin-font-weight: 350;
	--box-shadow: 0em 0em 0.5em rgba(0, 0, 0, 0.15);
	--border-thickness: 0.2em;
	--border-radius: 1em;
	--section-default-padding-vertical: 2.5em;
	--section-default-padding-horizontal: max(1em, env(safe-area-inset-left));
	--transition-duration: 150ms;
	--paragraph-max-width: 72ch;
}
@media (prefers-color-scheme: dark) {
	:root {
		--background-color: black;
		--on-background-color: #EFEFEF;
		--surface-color: black;
		--on-surface-color: #EFEFEF;
		--surface-overlay-color: white;
	}
}
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: var(--default-font-family);
}
body {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	min-height: 100vh;
	background-color: var(--background-color);
	color: var(--on-background-color);
	-webkit-text-size-adjust: 100%;
}
.surface {
	box-shadow: var(--box-shadow);
	background-color: var(--surface-color);
}
@media (prefers-color-scheme: dark) {
	.surface {
		position: relative;
		box-shadow: none;
	}
	.surface::before {
		content: "";
		position: absolute;
		top: 0;
		left: 0;
		border-radius: inherit;
		width: 100%;
		height: 100%;
		background-color: var(--surface-overlay-color);
		pointer-events: none;
	}
}

/* Header and Footer */

header, footer {
	display: flex;
	align-items: center;
	padding: 1em;
	padding-left: max(1em, env(safe-area-inset-left));
	padding-right: max(1em, env(safe-area-inset-right));
}

/* Header */

header {
	--box-shadow-color: rgba(30, 144, 255, 0.75);
	position: sticky;
	z-index: 1;
	top: 0;
	box-shadow: 0em -0.35em 1em 0em var(--box-shadow-color);
	height: calc(4em + env(safe-area-inset-top));
	padding-top: env(safe-area-inset-top);
	padding-bottom: 0em;
	background-color: var(--background-color);
}
@media (prefers-color-scheme: dark) {
	header {
		--box-shadow-color: var(--primary-color);
	}
}

/* -- Nav */

.headerLogo {
	margin-right: auto;
	font-size: 1.5em;
	font-weight: bold;
}
nav {
	--gap: 1.5em;
	z-index: 1;
	display: flex;
	align-items: center;
	gap: var(--gap);
}
.navLink {
	position: relative;
	text-decoration: none;
}
.navLink:not(.navLink--contact):not(.navLink--current),
.navLink:not(.navLink--contact):not(.navLink--current):visited {
	color: var(--on-background-color);
}
.navLink--standard {
	opacity: 0.6;
}
.navLink--standard::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 0%;
	margin-top: var(--border-thickness);
	width: 100%;
	height: var(--border-thickness);
	background-color: var(--primary-color);
}
.navLink--standard:not(.navLink--current)::after {
	transform: scaleX(0);
	transition-duration: var(--transition-duration);
}
.navLink--standard:not(.navLink--current):hover::after {
	transform: scaleX(1);
}
.navLink--current, .navLink--current:visited {
	opacity: 1;
	color: var(--primary-color)
}
.navLink--contact {
	font-size: 1.1em;
}
#navToggleInput {
	display: none;
}
@media (max-width: 692px) {
	#navToggleInput:not(:checked) ~ nav {
		display: none;
	}
	nav {
		--gap: 2em;
		position: fixed;
		top: 0;
		left: 0;
		flex-direction: column;
		width: 100vw;
		height: 100vh;
		padding: var(--gap);
		background-color: var(--background-color);
		font-size: 1.5em;
	}
	.navToggle {
		--gap: 0.4em;
		z-index: 2;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: stretch;
		gap: var(--gap);
		width: calc(var(--gap) * 5);
		height: calc(var(--gap) * 5);
		cursor: pointer;
	}
	.navToggle_line {
		transform-origin: center center;
		border-radius: var(--border-radius);
		height: var(--gap);
		background-color: var(--primary-color);
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:first-child {
		transform: translateY(calc(var(--gap) * 2)) rotate(45deg);
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:nth-child(2) {
		opacity: 0;
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:last-child {
		transform: translateY(calc(var(--gap) * -2)) rotate(-45deg);
	}
}

/* Footer */

footer {
	padding-bottom: max(1em, env(safe-area-inset-bottom));
	background-color: var(--on-background-color);
	color: var(--background-color);
}
.copyrightNotice {
	font-size: 0.8em;
}

/* Modal */

.modal {
	position: fixed;
	flex-grow: 1;
	z-index: 10;
	display: grid;
	place-items: center;
	width: 100vw;
	height: 100vh;
}
.modal__overlay {
	position: absolute;
	z-index: -1;
	opacity: 0.4;
	width: 100%;
	height: 100%;
	background-color: black;
	pointer-events: none;
}
.modal__box {
	max-width: 500px;
	min-width: 300px;
}
.modal__box::before {
	opacity: 0.16;
}
.modal__box > * {
	z-index: 1;
}
#modal__box {
	--gap: 1em;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: var(--gap);
	border-radius: var(--border-radius);
	width: 80vw;
	padding: var(--gap);
}
#modal__icon {
	display: grid;
	place-items: center;
	font-size: 5em;
}
#modal__icon.fa-check-circle {
	color: var(--success-color);
}
#modal__icon.fa-info-circle {
	color: var(--primary-color)
}
#modal__icon.fa-exclamation-triangle {
	color: var(--warning-color);
}
#modal__icon.fa-times-circle {
	color: var(--danger-color);
}
#modal__heading {
	font-size: 2em;
	font-weight: var(--default-font-weight);
	text-align: center;
}
#modal__message {
	font-weight: var(--default-font-weight);
}
#modal__message p {
	margin-left: 0em;
}
#modal__buttonContainer {
	display: flex;
	justify-content: flex-end;
	gap: var(--gap);
}
.modal__button {
	font-size: 0.9em;
}
@media (prefers-color-scheme: dark) {
	#modal__heading, #modal__message {
		font-weight: var(--thin-font-weight);
	}
}

/* Main */

main {
	flex-grow: 1;
}
section {
	width: 100%;
	padding: var(--section-default-padding-vertical) var(--section-default-padding-horizontal);
	font-weight: var(--default-font-weight);
}
p {
	margin-left: auto;
	margin-right: auto;
	max-width: var(--paragraph-max-width);
	line-height: 1.3em;
}
p + p {
	margin-top: 0.7em;
}
a {
	color: dodgerblue;
}
a:visited {
	color: orchid;
}
.primaryButton, .primaryButton:visited {
	transition: transform var(--transition-duration) ease;
	outline: none;
	border: none;
	border-radius: var(--border-radius);
	padding: 0.25em 0.75em;
	background-color: var(--primary-color);
	cursor: pointer;
	font-weight: var(--default-font-weight);
	text-align: center;
	text-decoration: none;
	color: var(--on-primary-color);
}
.primaryButton:hover {
	transform: scale(1.05);
}
li {
	list-style-position: inside;
}
@media (prefers-color-scheme: dark) {
	section {
		font-weight: var(--thin-font-weight);
	}
}

/* -- Sections */

.section--pageIntro__heading {
	margin: 0.5em;
	font-size: 3em;
	text-align: center;
	color: var(--primary-color);
}
.section--pageIntro__description p {
	font-size: 1.3em;
	text-align: center;
}

.section--text {
	margin: auto;
	max-width: calc(var(--paragraph-max-width) + 2 * var(--section-default-padding-horizontal));
	padding-top: var(--section-default-padding-horizontal);
	padding-bottom: var(--section-default-padding-horizontal);
}
.section--text h2 {
	margin-bottom: 0.25em;
}
.section--text img {
	display: block;
	margin: 2em auto;
}

/* -- -- Qualifications */

.section--qualifications {
	display: flex;
	justify-content: space-evenly;
	flex-wrap: wrap;
	gap: 1em;
	background-color: var(--surface-color);
}
.section--qualifications::before {
	opacity: 0.07;
}
.qualification {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 10em;
	text-align: center;
	color: var(--on-background-color);
}
.qualification__icon {
	opacity: 0.75;
	font-size: 3em;
}
.qualification__text {
	opacity: 0.5;
	margin-top: 0.5em;
	font-size: 0.9em;
	font-family: var(--cursive-font-family);
}

/* -- -- Double Item */

.section--doubleItem {
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	margin: auto;
	max-width: 1000px;
	padding-left: env(safe-area-inset-left);
	padding-right: env(safe-area-inset-right);
}
.section--doubleItem--reverse {
	flex-direction: row-reverse;
}
.section--doubleItem > * {
	width: 35%;
}
.section--doubleItem__iconContainer {
	display: grid;
	place-items: center;
}
.section--doubleItem__icon {
	font-size: 8em;
	color: var(--primary-color)
}
.section--doubleItem__textContainer {
	font-size: 1.2em;
}
.section--doubleItem__textContainer h2 {
	margin-bottom: 0.5em;
	font-size: 1.3em;
}
@media (max-width: 641px) {
	.section--doubleItem {
		flex-direction: column;
		gap: 1.5em;
		padding-left: var(--section-default-padding-horizontal);
		padding-right: var(--section-default-padding-horizontal);
	}
	.section--doubleItem > * {
		width: initial;
	}
	.section--doubleItem__icon {
		font-size: 6em;
	}
}

/* -- -- Price Display */

.section--priceDisplay {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 2em;
	text-align: center;
}
.section--priceDisplay__priceContainer {
	display: flex;
	flex-direction: column;
	align-items: center;
}
.section--priceDisplay__price {
	font-size: 4em;
	font-weight: bold;
	color: var(--primary-color);
}
.section--priceDisplay__term {
	opacity: 0.5;
}
.section--priceDisplay__button {
	font-size: 1.25em;
}

/* -- -- Testimonials */

.section--testimonials {
	--gap: 2em;
	display: flex;
	gap: var(--gap);
	overflow: auto;
	margin: auto;
	width: min-content;
	max-width: 100%;
	padding: var(--gap) 0em;
}
.section--testimonials::before, .section--testimonials::after {
	content: "";
	align-self: stretch;
	min-width: 1px;
}
.testimonial {
	flex-shrink: 0;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
	gap: 0.5em;
	transition: transform var(--transition-duration) ease;
	border-radius: var(--border-radius);
	width: 20em;
	height: 12em;
	padding: 1em;
	cursor: pointer;
}
.testimonial--modal {
	width: 60vw;
	height: auto;
	max-height: 60vh;
	padding: 1.25em;
	cursor: default;
	font-size: 1.25em;
}
.testimonial--card::before {
	opacity: 0.05;
}
.testimonial--card:hover {
	transform: scale(1.025);
}
.testimonial__quoteIcon {
	font-size: 2em;
	color: var(--primary-color);
}
.testimonial__quoteText {
	font-family: var(--serif-font-family);
	font-style: italic;
}
.testimonial--card .testimonial__quoteText {
	display: -webkit-box;
	-webkit-line-clamp: 4;
	-webkit-box-orient: vertical;
	overflow: hidden;
}
.testimonial__authorContainer {
	align-self: flex-end;
	display: flex;
	flex-direction: column;
	font-size: 0.75em;
	text-align: right;
}
.testimonial__authorName {
	opacity: 0.7;
	font-weight: bold;
}
.testimonial__authorPosition {
	opacity: 0.5;
	font-size: 0.9em;
}

